# DeepClaude

./: .env.example  .gitignore  Dockerfile  INSIDE_README.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
app/: main.py
app/clients/: deepseek_client.py  openai_compatible_client.py
app/config/: __init__.py  config_loader.py  list_models.py
app/deepclaude/: deepclaude.py
app/manager/: model_manager.py
app/model_manager/: model_configs.json
app/openai_composite/: openai_composite.py
app/utils/: auth.py
app/web_config/: __init__.py  config_manager.py  config_server.py
app/web_config/static/css/: style.css
app/web_config/static/js/: main.js
app/web_config/templates/: index.html  login.html
frontend/: index.html
frontend/js/: config.js
