[project]
name = "deepclaude"
version = "0.1.0"
description = "This is a project for combining DeepSeek and Claude into one api call. Full unleash the power of AI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.12",
    "PyYAML==6.0",
    "aiosignal==1.3.2",
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "astroid==3.3.8",
    "attrs==25.1.0",
    "babel==2.17.0",
    "bcrypt==4.0.1",
    "black==25.1.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorlog==6.9.0",
    "cryptography==44.0.1",
    "ctkdlib==8.0",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "dill==0.3.9",
    "ecdsa==0.19.0",
    "et_xmlfile==2.0.0",
    "fastapi==0.115.8",
    "frozenlist==1.5.0",
    "h11==0.14.0",
    "idna==3.10",
    "isort==6.0.0",
    "Jinja2==3.1.5",
    "macholib==1.16.3",
    "MarkupSafe==3.0.2",
    "mccabe==0.7.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "numpy==2.2.2",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "propcache==0.3.0",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.0",
    "pydantic_core==2.27.2",
    "pyinstaller==6.12.0",
    "pyinstaller-hooks-contrib==2025.1",
    "pylint==3.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "pytz==2025.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rsa==4.9",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.45.3",
    "tiktoken==0.9.0",
    "tkcalendar==1.6.1",
    "tomlkit==0.13.2",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "yarl==1.18.3",

]
